--- a/Frameworks/Views/Languages/Index.cshtml
+++ b/Frameworks/Views/Languages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Frameworks.Models.Progres>
+﻿@model IEnumerable<Frameworks.Models.Language>
 
 @{
     ViewData["Title"] = "Index";
@@ -12,18 +12,14 @@
 <table class="table">
     <thead>
         <tr>
-           
             <th>
-                @Html.DisplayNameFor(model => model.Comment)
+                @Html.DisplayNameFor(model => model.Name)
             </th>
-            
             <th>
-                Completion Date
-                
+                @Html.DisplayNameFor(model => model.IsSystemLanguage)
             </th>
-            
             <th>
-                Route Id
+                @Html.DisplayNameFor(model => model.IsAvailable)
             </th>
             <th></th>
         </tr>
@@ -31,17 +27,14 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            
             <td>
-                @Html.DisplayFor(modelItem => item.Comment)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
-           
             <td>
-                @Html.DisplayFor(modelItem => item.DateTime)
+                @Html.DisplayFor(modelItem => item.IsSystemLanguage)
             </td>
-            
             <td>
-                @Html.DisplayFor(modelItem => item.Route.Id)
+                @Html.DisplayFor(modelItem => item.IsAvailable)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
