--- a/Frameworks/Views/Home/Privacy.cshtml
+++ b/Frameworks/Views/Home/Privacy.cshtml
@@ -1,6 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
+@model string
+@{
+    string data = Model;
+}
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p id="Info">Use this page to detail your site's privacy policy.</p>
+<p> @data</p>
