--- a/Frameworks/Views/Progres/Create.cshtml
+++ b/Frameworks/Views/Progres/Create.cshtml
@@ -15,15 +15,12 @@
             <input type="hidden" asp-for="Deleted" />
             <input type="hidden" asp-for="DateTime" />
             <input type="hidden" asp-for="Completed" />
+            <input type="hidden" asp-for="FrameworksUserId" />
             <div class="form-group">
                 <label asp-for="RouteId" class="control-label"></label>
                 <select asp-for="RouteId" class ="form-control" asp-items="ViewBag.RouteId"></select>
             </div>
-            <div class="form-group">
-                <label asp-for="FrameworksUserId" class="control-label"></label>
-                <input asp-for="FrameworksUserId" class="form-control" />
-                <span asp-validation-for="FrameworksUserId" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <label asp-for="Comment" class="control-label"></label>
                 <input asp-for="Comment" class="form-control" />
