--- a/Frameworks/Views/Shared/_LoginPartial.cshtml
+++ b/Frameworks/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
-﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+﻿@using Frameworks.Areas.Identity.Data
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<FrameworksUser> SignInManager
+@inject UserManager<FrameworksUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
